--- a/index1.html
+++ b/index1.html
@@ -1,1 +1,32 @@
-hello world
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FIRST PROJECT</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <H1>WELCOME TO MAJO INDUSTRY</H1>
+    <div class="example">
+        <h2>JONAM</h2>
+        <h4>HISTORY</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt autem non, eligendi necessitatibus perferendis rerum quibusdam suscipit quasi perspiciatis, iusto, animi cum eaque tempora enim aut vel! Ipsam, quis quibusdam.</p>
+        <button>DELETE</button>
+    </div>
+    <div class="popup-overlay"></div>
+    <button class="plus-button" id="plus-button1">+</button>
+    <div class="popup-box">
+        <input type="text" placeholder="your name" class="popupbox-name">
+        <input type="text" placeholder="age" class="popupbox-age">
+        <textarea placeholder="short description" class="popupbox-shortdescription"></textarea>
+        <button class="add-button">ADD</button>
+        <button class="cancel-button">CANCEL</button>
+    </div>
+    
+
+
+
+
+    <script src="javascript.js"></script>
+</body>
+</html>
